--- a/index.html
+++ b/index.html
@@ -45,21 +45,20 @@
 
 
 <header id="main">
-  <h1 class= 'titles'>History of College Athletics</h1><br>
-  <div class = 'typewriter'>
-  <h2>Taught by Professor John Bacon<h2>
+  <h1 class= 'first_titles'>History of College Athletics</h1><br>
+  <h2>Taught by Professor John Bacon<br> Mon-Wed 8:30-10:00 Fall 2019<h2>
 
-  <h3> Mon & Wed 8:30-10 Fall 2019 (EDUC 212)</h3><br>
-
+  <!-- <h3></h3><br> -->
 
   <p>This course will explain how football became a public spectacle at the University of
   Michigan and other campuses. In the process, it will develop the central theme that the
   marriage between university academics and big-time athletics was not inevitable, but it
   has thrived anyway, due to the efforts of a few fascinating personalities at a few crucial
   junctures.</p>
-</div>
 <!-- From John Bacon's Syllabus -->
 </header>
+<div class ='marchingband' role = 'img' aria-label = 'Go Blue Support Banner Backround Image'>
+</div>
 <body>
 <h3>Topics in this course include: </h3>
 <div class = "course_topics">
@@ -72,15 +71,17 @@
 </ul>
 </div>
 
-<div class="flip-card">
-  <div class="flip-card-inner">
-    <div class="flip-card-front">
-      <img src="images/john_bacon.jpg" alt="John Bacon" style="width:300px;height:300px;">
-    </div>
-    <div class="flip-card-back">
-      <h1>John Bacon</h1>
-      <p>Professor of Sports Histroy at the University of Michigan</p>
-      <p>3x New York Times Best Seller</p>
+<div class = "flip-container">
+  <div class="flip-card">
+    <div class="flip-card-inner">
+      <div class="flip-card-front">
+        <img src="images/john_bacon.jpg" alt="John Bacon">
+      </div>
+      <div class="flip-card-back">
+        <h1>John Bacon</h1>
+        <p>Professor of Sports History at the University of Michigan</p>
+        <p>3x New York Times Best Seller</p>
+      </div>
     </div>
   </div>
 </div>
@@ -98,7 +99,7 @@
 </body>
 <footer>
   <p>
-    This page was produced by Daniel Eilender. <br> Please contact me @ danlouis@umich.edu<br>
+    This page was produced by Daniel Eilender<br> Please contact me @ danlouis@umich.edu<br>
   </p>
 </footer>
 
