--- a/modern.html
+++ b/modern.html
@@ -34,7 +34,7 @@
 </div>
 
 <header id="main">
-<h1 class = 'titles'>The Modern Game</h1>
+<h1 class>The Modern Game</h1>
 <p>
   Modern College Football is a multi-billion dollar industry that fills stadiums around the country with millions of fans every Saturday in the fall. College football is the lifeblood of universities as it motivates students to attend certain schools an is the thread that connects alumni back to campus. No other country in the world has a system such as college sports it is uniquely American.
 </p>
