--- a/um.html
+++ b/um.html
@@ -33,13 +33,14 @@
   </div>
 </div>
 <header id="main">
-  <h1 class='titles'> History of College Football at the University of Michigan</h1>
+  <h1 > History of College Football at the University of Michigan</h1>
     <p>
       On May 30, 1879, Michigan played its first intercollegiate football game against Racine College at White Stocking Park in Chicago. The Chicago Tribune called it "the first rugby-football game to be played west of the Alleghenies." The final score was 1-0 Wolverines.
     </p>
 </header>
 
 <div class = 'container'>
+
 <div class="james_angell">
   <img src="images/james_angell.jpg" alt="James B. Angell former President of the University of Michigan"/>
   <h3>The First Athletic Conference</h3>
