--- a/ff.html
+++ b/ff.html
@@ -14,9 +14,10 @@
   <link rel="stylesheet" type="text/css" href="css/html5reset.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://fonts.googleapis.com/css?family=Cutive+Mono|Open+Sans&display=swap" rel="stylesheet">
+  <!-- <link href="https://fonts.googleapis.com/css?family=Cutive+Mono|Open+Sans&display=swap" rel="stylesheet"> -->
   <title>The Founding Fathers of American College Football</title>
 </head>
+<body>
 <div class="skip"><a href="#main">Skip to Main Content</a></div>
 <div class= "dropdown">
 <button class="dropbtn">Menu</button>
@@ -41,7 +42,7 @@
   </p>
 </header>
 <div class = 'container'>
-<body>
+
   <div class="walter_camp">
     <img src="images/walter_camp.jpg" alt="Walter Camp a Founding Father of College Football"/>
     <h3> Walter Camp</h3>
@@ -87,11 +88,13 @@
 <!-- https://en.wikipedia.org/wiki/Pop_Warner#Innovation -->
   </p>
 </div>
-</body>
 </div>
+
 
 <footer>
   <p>This page was produced by Daniel Eilender<br> Please contact me @ danlouis@umich.edu</p>
 </footer>
+</body>
+
 
 </html>
