--- a/index.html
+++ b/index.html
@@ -16,12 +16,11 @@
   <link rel="stylesheet" type="text/css" href="css/html5reset.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-  <link href="https://fonts.googleapis.com/css?family=Cutive+Mono|Open+Sans&display=swap" rel="stylesheet">
+  <!-- <link href="https://fonts.googleapis.com/css?family=Cutive+Mono|Open+Sans&display=swap" rel="stylesheet"> -->
   <title>History of College Athletics</title>
 </head>
 
-
+<body>
 <div class="skip"><a href="#main">Skip to Main Content</a></div>
 
 
@@ -40,27 +39,26 @@
   </div>
 </div>
 
-<!-- Do I want Icons -->
-<!-- <i class="material-icons">sports_football</i> -->
-
-
 <header id="main">
   <h1 class= 'first_titles'>History of College Athletics</h1><br>
-  <h2>Taught by Professor John Bacon<br> Mon-Wed 8:30-10:00 Fall 2019<h2>
+<!-- From John Bacon's Syllabus -->
+</header>
 
-  <!-- <h3></h3><br> -->
+<div class='course_description'>
+  <h2>Taught by Professor John Bacon<br> Mon-Wed 8:30-10:00 Fall 2019</h2>
+
+<!-- <h3></h3><br> -->
 
   <p>This course will explain how football became a public spectacle at the University of
   Michigan and other campuses. In the process, it will develop the central theme that the
   marriage between university academics and big-time athletics was not inevitable, but it
   has thrived anyway, due to the efforts of a few fascinating personalities at a few crucial
   junctures.</p>
-<!-- From John Bacon's Syllabus -->
-</header>
+</div>
 <div class ='marchingband' role = 'img' aria-label = 'Go Blue Support Banner Backround Image'>
 </div>
-<body>
-<h3>Topics in this course include: </h3>
+
+<h3>Topics in this course include:</h3>
 <div class = "course_topics">
 <ul>
   <li>Impact of the Northwest Ordinance</li>
@@ -85,22 +83,11 @@
     </div>
   </div>
 </div>
-<!-- <div class='icons'><i class="material-icons">sports_football</i> <i class="material-icons">school</i>
-<i class="material-icons">sports_football</i> <i class="material-icons">school</i>
-<i class="material-icons">sports_football</i> <i class="material-icons">school</i>
-<i class="material-icons">sports_football</i> <i class="material-icons">school</i>
-<i class="material-icons">sports_football</i> <i class="material-icons">school</i></div> -->
-
-
-
-
-
-
-</body>
 <footer>
   <p>
-    This page was produced by Daniel Eilender<br> Please contact me @ danlouis@umich.edu<br>
-  </p>
-</footer>
+    This page was produced by Daniel Eilender<br> Please contact me @ danlouis@umich.edu<br></p>
+  </footer>
+</body>
+
 
 </html>
