--- a/modern.html
+++ b/modern.html
@@ -14,9 +14,10 @@
   <link rel="stylesheet" type="text/css" href="css/html5reset.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://fonts.googleapis.com/css?family=Cutive+Mono|Open+Sans&display=swap" rel="stylesheet">
+  <!-- <link href="https://fonts.googleapis.com/css?family=Cutive+Mono|Open+Sans&display=swap" rel="stylesheet"> -->
   <title> The Modern Era of College Football</title>
 </head>
+<body>
 <div class="skip"><a href="#main">Skip to Main Content</a></div>
 <div class= "dropdown">
 <button class="dropbtn">Menu</button>
@@ -80,4 +81,5 @@
 <footer>
   <p>This page was produced by Daniel Eilender<br> Please contact me @ danlouis@umich.edu</p>
 </footer>
+</body>
 </html>
