--- a/um.html
+++ b/um.html
@@ -14,9 +14,9 @@
   <link rel="stylesheet" type="text/css" href="css/html5reset.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://fonts.googleapis.com/css?family=Cutive+Mono|Open+Sans&display=swap" rel="stylesheet">
   <title>The History of College Football at The University of Michigan</title>
 </head>
+<body>
 <div class="skip"><a href="#main">Skip to Main Content</a></div>
 <div class= "dropdown">
 <button class="dropbtn">Menu</button>
@@ -106,4 +106,5 @@
 <footer>
   <p>This page was produced by Daniel Eilender.<br> Please contact me @ danlouis@umich.edu</p>
 </footer>
+</body>
 </html>
