--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </nav>
   </div>
 </div>
-
+<main>
 <header id="main">
   <h1 class= 'first_titles'>History of College Athletics</h1><br>
 <!-- From John Bacon's Syllabus -->
@@ -83,6 +83,7 @@
     </div>
   </div>
 </div>
+</main>
 <footer>
   <p>
     This page was produced by Daniel Eilender<br> Please contact me @ danlouis@umich.edu<br></p>
