--- a/ff.html
+++ b/ff.html
@@ -33,6 +33,7 @@
     </nav>
   </div>
 </div>
+<main>
 <header id="main">
 <h1>Founding Fathers of American College Football.</h1>
   <p>
@@ -89,7 +90,7 @@
   </p>
 </div>
 </div>
-
+</main>
 
 <footer>
   <p>This page was produced by Daniel Eilender<br> Please contact me @ danlouis@umich.edu</p>
