--- a/ff.html
+++ b/ff.html
@@ -45,7 +45,7 @@
 </header>
 <div class = 'container'>
 
-  <div class="walter_camp">
+  <div id = 'walter_camp' class="walter_camp">
     <img src="images/walter_camp.jpg" alt="Walter Camp a Founding Father of College Football"/>
     <h2> Walter Camp</h2>
     <p>
