--- a/ff.html
+++ b/ff.html
@@ -14,6 +14,7 @@
   <meta charset="utf-8">
   <link rel="stylesheet" type="text/css" href="css/html5reset.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link href="https://fonts.googleapis.com/css?family=Cutive+Mono&display=swap" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- <link href="https://fonts.googleapis.com/css?family=Cutive+Mono|Open+Sans&display=swap" rel="stylesheet"> -->
   <title>The Founding Fathers of American College Football</title>
