--- a/ff.html
+++ b/ff.html
@@ -46,7 +46,7 @@
 </header>
 <div class = 'container'>
 
-  <div id = 'walter_camp' class="walter_camp">
+  <div class="walter_camp" tabindex="0">
     <img src="images/walter_camp.jpg" alt="Walter Camp a Founding Father of College Football"/>
     <h2> Walter Camp</h2>
     <p>
@@ -55,7 +55,7 @@
   </div>
 
 
-<div class="john_heismen">
+<div class="john_heismen" tabindex="0">
   <img src="images/john_heismen.jpeg" alt="John Heismen a Founding Father of College Football"/>
   <h2> John Hesimen</h2>
   <p>
@@ -64,7 +64,7 @@
 </div>
 
 
-<div class="aa_stagg">
+<div class="aa_stagg" tabindex="0">
   <img src="images/aa_stagg.png" alt="Amos Alonso Stagg a Founding Father of College Football"/>
   <h2> Amos Alonso Stagg </h2>
   <p>
@@ -73,7 +73,7 @@
   </p>
 </div>
 
-<div class="fielding_yost">
+<div class="fielding_yost" tabindex="0">
   <img src="images/fielding_yost.jpg" alt="Fielding Yost a Founding Father of College Football and Head Coach of the University of Michigan"/>
     <h2> Fielding H. Yost </h2>
   <p>
@@ -83,7 +83,7 @@
 </div>
 
 
-<div class="pop_warner">
+<div class="pop_warner" tabindex="0">
   <img src="images/pop_warner.png" alt="Pop Warner a Founding Father of College Football"/>
   <h2> Pop Warner</h2>
   <p>
