--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 </ul>
 </div>
 
-<div class = "flip-container">
+<div class = "flip-container"  tabindex="0">
   <div class="flip-card">
     <div class="flip-card-inner">
       <div class="flip-card-front">
