--- a/um.html
+++ b/um.html
@@ -42,7 +42,7 @@
 
 <div class = 'container'>
 
-<div class="james_angell">
+<div class="james_angell" tabindex="0">
   <img src="images/james_angell.jpg" alt="James B. Angell former President of the University of Michigan"/>
   <h2>The First Athletic Conference</h2>
   <p>
@@ -52,7 +52,7 @@
 
 
 
-<div class = "yost_era">
+<div class = "yost_era" tabindex="0">
   <img src="images/original_big_house.jpg" alt="Picture of the Big House when it was originlly built"/>
   <h2>The Yost Era</h2>
   <p>
@@ -60,7 +60,7 @@
   </p>
 </div>
 
-<div class = "fritz_crisler">
+<div class = "fritz_crisler" tabindex="0">
     <img src="images/fritz_crisler.png" alt="Fritz Chrisler"/>
     <h2>Passing of the torch: The Rise of Fritz Crisler</h2>
   <p>
@@ -69,7 +69,7 @@
   </p>
 </div>
 
-<div class = "bo_schembechler">
+<div class = "bo_schembechler" tabindex="0">
   <img src="images/bo_schembechler.jpg" alt="Bo Schembechler"/>
   <h2>Bo Schembechler The Michigan Man</h2>
   <p>
@@ -80,7 +80,7 @@
 </div>
 
 
-<div class = "rose_bowl">
+<div class = "rose_bowl" tabindex="0">
   <img src="images/charles_woodson.jpg" alt="Charles Woodson with rose in mouth"/>
   <h2>Champions of the World 1997 Rose Bowl</h2>
   <p>
@@ -91,7 +91,7 @@
 </div>
 
 
-<div class = "jim_harbaugh">
+<div class = "jim_harbaugh" tabindex="0">
   <img src="images/jim_harbaugh.jpeg" alt="Jim Harbaugh"/>
   <h2>The Savior: Jim Harbaugh</h2>
   <p>
