--- a/modern.html
+++ b/modern.html
@@ -44,7 +44,7 @@
 
 <div class='container'>
   <!-- <div class='flex_container'> -->
-  <div class = "knute_rockne">
+  <div class = "knute_rockne" tabindex="0">
   <img src="images/knute_rockne.jpg" alt="Knute Rockne Head Coach of Notre Dame"/>
   <h2>Knute Rockne and the rise of Notre Dame</h2>
   <p>
@@ -53,14 +53,14 @@
   </div>
 
 
-  <div class = "race">
+  <div class = "race" tabindex="0">
   <img src="images/ernie_davis.jpg" alt="Ernie Davis the first black Heismen trophy winner"/>
   <h2>Ernie Davis Heismen Winner</h2>
   <p>Race has always played a major role in college football. Many southern schools did not allow black players on their team well in to the 1970's. The first black heismen trophy winner was Ernie Davis in 1961 who was an all american running back for Syracuse. Duffy Daughtery the coach was the head coach of Michigan State University from 1954 to 1972 and was one of the first coaches to field a completely integrated team which enabled him to lead Michigan State to two back to back national championships in 1965 and 1966.</p>
   </div>
 
 
-  <div class = "pony_express">
+  <div class = "pony_express" tabindex="0">
   <img src="images/smu.jpg" alt="Two players from SMU during the wild west era"/>
   <h2>Lying, Cheating and Paying The Death of a Program</h2>
   <p>
@@ -69,7 +69,7 @@
   </div>
 
 
-  <div class = "current_day">
+  <div class = "current_day" tabindex="0">
   <img src="images/nick_saban.jpg" alt="Nick Saban head coach of Alabama"/>
   <h2>The Titans of Today</h2>
   <p>
