--- a/ff.html
+++ b/ff.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+
 <!-- <main> -->
 <head>
+  <html lang="en" dir="ltr">
   <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-151754271-1"></script>
 <script>
@@ -19,6 +20,7 @@
   <!-- <link href="https://fonts.googleapis.com/css?family=Cutive+Mono|Open+Sans&display=swap" rel="stylesheet"> -->
   <title>The Founding Fathers of American College Football</title>
 </head>
+<main>
 <body>
 <div class="skip"><a href="#main">Skip to Main Content</a></div>
 <div class= "dropdown">
@@ -93,7 +95,7 @@
 </div>
 </div>
 
-
+</main>
 <footer>
   <p>This page was produced by Daniel Eilender<br> Please contact me @ danlouis@umich.edu</p>
 </footer>
