--- a/modern.html
+++ b/modern.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+
 <head>
+  <html lang="en" dir="ltr">
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-151754271-1"></script>
   <script>
@@ -18,6 +19,7 @@
   <!-- <link href="https://fonts.googleapis.com/css?family=Cutive+Mono|Open+Sans&display=swap" rel="stylesheet"> -->
   <title> The Modern Era of College Football</title>
 </head>
+<main>
 <body>
 <div class="skip"><a href="#main">Skip to Main Content</a></div>
 <div class= "dropdown">
@@ -78,7 +80,7 @@
   </div>
 <!-- </div> -->
 </div>
-
+</main>
 <footer>
   <p>This page was produced by Daniel Eilender<br> Please contact me @ danlouis@umich.edu</p>
 </footer>
