--- a/um.html
+++ b/um.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
 <head>
+<html lang="en" dir="ltr">
   <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-151754271-1"></script>
 <script>
@@ -17,6 +17,7 @@
   <link href="https://fonts.googleapis.com/css?family=Cutive+Mono&display=swap" rel="stylesheet">
   <title>The History of College Football at The University of Michigan</title>
 </head>
+<main>
 <body>
 <div class="skip"><a href="#main">Skip to Main Content</a></div>
 <div class= "dropdown">
@@ -103,9 +104,10 @@
   </p>
 </div>
 </div>
-
+</main>
 <footer>
   <p>This page was produced by Daniel Eilender.<br> Please contact me @ danlouis@umich.edu</p>
 </footer>
 </body>
+
 </html>
