--- a/forms.html
+++ b/forms.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+
 <head>
+<html lang="en">
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-151754271-1"></script>
 <script>
@@ -16,6 +17,7 @@
 	<link rel="stylesheet" type="text/css" href="css/formStyle.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
+<main>
 <body>
 <div class="skip"><a href="#form">Skip to Main Content</a></div>
 <div class= "dropdown">
@@ -44,7 +46,7 @@
 <input id="submit" type="submit" value="Send">
 </form>
 
-
+</main>
 
 <footer>
   <p>This page was produced by Daniel Eilender<br> Please contact me @ danlouis@umich.edu</p>
