--- a/forms.html
+++ b/forms.html
@@ -34,7 +34,7 @@
     </nav>
   </div>
 </div>
-<header>Contact</header>
+<header><h1>Contact</h1></header>
 
 <form id="form"  action="https://formspree.io/moqqvybk" method ="POST">
     <label for="name">Name</label>
