--- a/um.html
+++ b/um.html
@@ -109,7 +109,7 @@
 
 </main>
 <footer>
-  <p>This page was produced by Daniel Eilender.<br> Please contact me @ danlouis@umich.edu</p>
+  <p>This page was produced by Daniel Eilender<br> Please contact me @ danlouis@umich.edu</p>
 </footer>
 </body>
 
