--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 </div>
 
 <header id="main">
-  <h1 class= 'first_titles'>History of College Athletics</h1><br>
+  <h1 class= 'first_titles titles'>History of College Athletics</h1><br>
 <!-- From John Bacon's Syllabus -->
 </header>
 
