--- a/forms.html
+++ b/forms.html
@@ -35,7 +35,7 @@
     </nav>
   </div>
 </div>
-<header><h1>Contact</h1></header>
+<header><h1 class ='titles'>Contact</h1></header>
 
 <form id="form"  action="https://formspree.io/moqqvybk" method ="POST">
     <label for="name">Name</label>
