--- a/ff.html
+++ b/ff.html
@@ -44,7 +44,7 @@
 <h1 class ='titles'>Founding Fathers of American College Football</h1>
   <p>
   College football began Novemeber 6, 1869. Over the course of the next sixty years many people were able to influence the future of the sports. The most notable
-  of these are known at the founding fathers. The founding fathers of football consist of: Walter Camp, Pop Warner, Fielding Yost, John Heismen, Amos Alonso Stagg and Knute Rockne. The biographies and
+  of these are known as the founding fathers. The founding fathers of football consist of: Walter Camp, Pop Warner, Fielding Yost, John Heismen, Amos Alonso Stagg and Knute Rockne. The biographies and
   and contributions of these men can be found below.
   </p>
 </header>
