--- a/index.html
+++ b/index.html
@@ -72,12 +72,12 @@
 </div>
 
 <div class = "flip-container"  tabindex="0">
-  <div class="flip-card">
-    <div class="flip-card-inner">
+  <div class="flip-card" tabindex="0">
+    <div class="flip-card-inner"tabindex="0">
       <div class="flip-card-front">
         <img src="images/john_bacon.jpg" alt="John Bacon">
       </div>
-      <div class="flip-card-back">
+      <div class="flip-card-back"tabindex="0">
         <h1>John Bacon</h1>
         <p>Professor of Sports History at the University of Michigan</p>
         <p>3x New York Times Best Seller</p>
